[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Counts stuff"
authors = ["Callum Mole"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
