[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Counts stuff"
authors = ["Callum Mole"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
